# checkers_checkerboard

./: .gitignore  Cargo.toml
src/: helpers.rs  lib.rs  main.rs  read_db.rs  transposition_table.rs
src/game/: bitboard.rs  game.rs  mod.rs  move_sequence.rs
src/game/solver/: dumb.rs  endgame_table.rs  engine.rs  mod.rs  negamax.rs
