[package]
name = "checkers_checkerboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.27.0", features = ["full"] }

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1
